tests/snapshots/examples_fixtures/type_system__TypeSystem__StrictPublicChecked.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/TypeSystem/StrictPublicChecked.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `TypeSystem.StrictPublicChecked` doesn't match file path `examples/type_system/TypeSystem/StrictPublicChecked.flx`.

  examples/type_system/TypeSystem/StrictPublicChecked.flx:5:1
  |
5 | module TypeSystem.StrictPublicChecked {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
